--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "xstate": "4.10.0"
   },
   "devDependencies": {
-    "typescript": "3.3.3"
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "node-sass": "^4.14.1",
+    "parcel-bundler": "^1.12.4",
+    "typescript": "^3.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
